# rdg-linux

./: Cargo.toml  install.sh
assets/: rdg.glade
src/: connections.rs  error.rs  macros.rs  main.rs  profiles.rs  rdg.rs  resources.rs  settings.rs
