[package]
name = "rdg"
version = "3.1.0"
authors = ["Edwin Svensson <rdg-linux@olback.net>"]
edition = "2018"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gio = "0.19"
gtk = { version = "0.18", features = ["v3_24_9"] }
# glib = "0.19"
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
padlock = "0.2"
openssl = "0.10.64"

[build-dependencies]
regex = "1.3"
last-git-commit = "0.2"
